pkpir wykaz dokumentow dowolne okresy

--- a/npkpir_23/web/ksiegowa/sub/layoutNowy/west.xhtml
+++ b/npkpir_23/web/ksiegowa/sub/layoutNowy/west.xhtml
@@ -46,7 +46,7 @@
                 <p:menuitem onclick="setBusyCursor();" oncomplete="removeBusyCursor();" global="true" value="import sprzedaży" outcome="importy"  icon="ui-icon-circle-arrow-e" update="@form" />
                 <p:menuitem onclick="setBusyCursor();" oncomplete="removeBusyCursor();" global="true" value="skany dok." outcome="skanydok"  icon="ui-icon-circle-arrow-e" update="@form" />
 
-                <p:menuitem onclick="setBusyCursor();" oncomplete="removeBusyCursor();" global="true" value="obroty w roku" outcome="obroty"  icon="ui-icon-circle-arrow-e" update="@form" />  
+<!--                <p:menuitem onclick="setBusyCursor();" oncomplete="removeBusyCursor();" global="true" value="obroty w roku" outcome="obroty"  icon="ui-icon-circle-arrow-e" update="@form" />  -->
                 <p:menuitem onclick="setBusyCursor();" oncomplete="removeBusyCursor();" global="true" value="kontrahenci fakt." outcome="klienci"  icon="ui-icon-circle-arrow-e"/>  
                 
             </p:menu>
