--- a/npkpir_23/web/ksiegowa/sub/layoutZmianapodatnika/west.xhtml
+++ b/npkpir_23/web/ksiegowa/sub/layoutZmianapodatnika/west.xhtml
@@ -27,7 +27,7 @@
                         <p:menuitem global="false" value="zaplacone"  outcome="zaplacone" icon="ui-icon-circle-arrow-e"/>  -->
                         <p:menuitem global="false" value="import sprzedaży" outcome="importy"  icon="ui-icon-circle-arrow-e" update="@form" /><p:menuitem global="false" value="skany dok." outcome="skanydok"  icon="ui-icon-circle-arrow-e" update="@form" />
 
-                    <p:menuitem global="false" value="obroty w roku" outcome="obroty"  icon="ui-icon-circle-arrow-e" update="@form" />  
+<!--                    <p:menuitem global="false" value="obroty w roku" outcome="obroty"  icon="ui-icon-circle-arrow-e" update="@form" />  -->
                     <p:menuitem global="false" value="kontrahenci fakt." outcome="klienci"  icon="ui-icon-circle-arrow-e"/>  
                     <p:menuitem global="false" value="zestaw. sumaryczne"  outcome="zestawienie" icon="ui-icon-circle-arrow-e"/>  
                 </p:menu>
