--- a/npkpir_23/web/wspolny/sub/faktura/faktura_danedofaktury.xhtml
+++ b/npkpir_23/web/wspolny/sub/faktura/faktura_danedofaktury.xhtml
@@ -20,6 +20,9 @@
                         <p:inputMask id="polekonto" value="#{WpisView.podatnikObiekt.nrkontabankowego}"  style="width: 300px;" required="false"
                                      mask="99 9999 9999 9999 9999 9999 9999">
                         </p:inputMask>
+                         <h:outputLabel value="SWIFT"/>
+                                     <p:inputText id="poleswift" value="#{WpisView.podatnikObiekt.swift}" maxlength="26" style="width: 100px;" required="false">
+                    </p:inputText>
                         <h:outputLabel value="termin płatności w dniach (np. 14)"/>
                         <p:spinner id="spinnerBasic" value="#{WpisView.podatnikObiekt.platnoscwdni}" max="365" min="0" size="3" />  
                         <h:outputLabel value="nazwa firmy umieszczana na fakturach sprzedaży"/>
