--- a/npkpir_23/web/ksiegowaFK/ksiegowaFKRejestry.xhtml
+++ b/npkpir_23/web/ksiegowaFK/ksiegowaFKRejestry.xhtml
@@ -41,6 +41,7 @@
                     <p:growl widgetVar="grmes"/>
                     
                     <!-- Include various dialog panels -->
+                    <ui:include src="sub/dialog/dialog_niemcy.xhtml"/>
                     <ui:include src="sub/dialog/dialog_ewidencjevat.xhtml"/>
                     <ui:include src="sub/dialog/dialog_ewvat_dedra.xhtml"/>
                     <ui:include src="sub/dialog/dialog_jpk_vat.xhtml"/>
