--- a/npkpir_23/web/ksiegowaFK/sub/dialog/ewidencjavat/ewidencje_dok.xhtml
+++ b/npkpir_23/web/ksiegowaFK/sub/dialog/ewidencjavat/ewidencje_dok.xhtml
@@ -17,7 +17,7 @@
                 <p:commandButton value="Wyślij" icon="ui-icon-mail-closed" onclick="PF('confirmation').show();" actionListener="#{sesjaView.dodajmail()}" onsuccess="wydrukewidencje('#{WpisView.getPodatnikObiekt().getNip()}','#{item[0].nazwaewidencji.nazwa}')"  style="width: 120px; margin-left: 2%;">
                     <f:ajax event="click" listener="#{ewidencjaVatView.ustawNazwaewidencji((item[0].nazwaewidencji))}"/>
                 </p:commandButton>
-                <p:commandButton value="Odśwież zapisy" icon="ui-icon-arrowreturnthick-1-n" actionListener="#{ewidencjaVatView.stworzenieEwidencjiZDokumentowFK(WpisView.getPodatnikObiekt(), null)}" 
+                <p:commandButton value="Odśwież zapisy" icon="ui-icon-arrowreturnthick-1-n" actionListener="#{ewidencjaVatView.stworzenieEwidencjiZDokumentowFK(WpisView.getPodatnikObiekt(), false)}" 
                                  update="formm" style="width: 120px; margin-left: 200px;"/>
                 <!--                            <h:outputText value="suma netto "/>
                                             <bcf:outputpl value="#{ewidencjaVatView.podsumowanie(item,'n')}"/>
