wydruki zestawien miesiecnych dla fk

--- a/npkpir_23/web/ksiegowaFK/sub/menu/menudokumenty.xhtml
+++ b/npkpir_23/web/ksiegowaFK/sub/menu/menudokumenty.xhtml
@@ -73,6 +73,7 @@
             <h:form>
                 <p:menu id="d1m3" styleClass="d1m" style="width: 400px; text-align: center; height: 150px;">
                     <p:menuitem value="zestawienia kontrahentów" actionListener="#{gUSView.view}" timeout="50000" oncomplete="ustawdialogframe('menudokumenty');"></p:menuitem>
+                    <p:menuitem value="wydruki zestawień miesięcznych" actionListener="#{zestawieniamiesieczneWydruki.wydruki}"></p:menuitem>
                 </p:menu>
             </h:form>      
         </p:tab>
