--- a/kadry/src/main/webapp/pracownik/sub/edycjadanych_angaz.xhtml
+++ b/kadry/src/main/webapp/pracownik/sub/edycjadanych_angaz.xhtml
@@ -127,7 +127,7 @@
                                                     </f:facet>
                                                     <h:outputText value="#{itemAngaz.serialsp}"/>
                                                 </p:column>-->
-                        <p:column  sortBy="#{itemAngaz.pracownik.nazwiskoImie}" sortOrder="asc" filterBy="#{itemAngaz.pracownik.nazwiskoImie}" filterMatchMode="contains">
+                        <p:column  sortBy="#{itemAngaz.pracownik.nazwiskoImie}" sortOrder="asc" filterBy="#{itemAngaz.pracownik.nazwiskoImie}" filterMatchMode="contains" sortPriority="1">
                             <f:facet name="header">
                                 <h:outputText value="pracownik"/>
                             </f:facet>
@@ -168,6 +168,12 @@
                             <h:outputText value="#{itemAngaz.studentsymbol}"/>
                         </p:column>
                         <p:column width="40" style="text-align: center;" sortBy="#{itemAngaz.odliczaculgepodatkowa}">
+                            <f:facet name="header">
+                                <h:outputText value="ulga pod."/>
+                            </f:facet>
+                            <h:outputText value="#{itemAngaz.ulgasymbol}"/>
+                        </p:column>
+                          <p:column width="40" style="text-align: center;" sortBy="#{itemAngaz.odliczaculgepodatkowa}">
                             <f:facet name="header">
                                 <h:outputText value="ulga pod."/>
                             </f:facet>
@@ -237,6 +243,8 @@
                         <h:outputText value="czy to nierezydent" />
                         <h:outputText value="tę informację uzupełniamy na poziomie pracownika"/>
                         <!--                        <p:selectBooleanCheckbox id="nierezydent" value="{angazView.selectedlista.nierezydent}"/>-->
+                        <h:outputText value="wniosek do pracodawcy o niestosowanie wyższej stawki zaliczek na podatek"/>
+                        <p:selectBooleanCheckbox id="student" value="#{angazView.selectedlista.pierwszyprogwniosek}"/>
                     </p:panelGrid>
                 </p:outputPanel>
                 <p:commandButton value="zapisz" actionListener="#{angazView.zapiszangaz()}" styleClass="buttonnorm" update="@form"/>
