--- a/kadry/src/main/webapp/parametry/sub/edycjadanych_parametry.xhtml
+++ b/kadry/src/main/webapp/parametry/sub/edycjadanych_parametry.xhtml
@@ -169,7 +169,7 @@
                             </f:facet>
                             <h:outputText value="#{item11.id}"/>
                         </p:column>
-                        <p:column width="30" style="text-align: center;" sortBy="#{item11.kod}"  sortOrder="asc">
+                        <p:column width="30" style="text-align: center;" sortBy="#{item11.kod}"  sortOrder="asc" filterBy="#{item11.kod}">
                             <f:facet name="header">
                                 <h:outputText value="kod"/>
                             </f:facet>
@@ -183,11 +183,11 @@
                                          <p:ajax event="save" listener="#{rodzjawynagrodzeniaSetView.edytujrodzajwyn(item11)}" />
                             </p:inplace>
                         </p:column>
-                        <p:column width="300" >
+                        <p:column width="300" filterBy="#{item11.opispelny}" filterMatchMode="contains">
                             <f:facet name="header">
                                 <h:outputText value="opis"/>
                             </f:facet>
-                            <h:outputText value="#{item11.opispelny}"  rendered="#{item11.tylkosuperplace eq false and item11.aktywne eq false}"/>
+                            <h:outputText value="#{item11.opispelny}"  rendered="#{item11.tylkosuperplace eq false and item11.aktywne eq false}" />
                             <h:outputText value="#{item11.opispelny}"  rendered="#{item11.aktywne eq true and item11.tylkosuperplace eq false}" style="color: #1AA11A"/>
                             <h:outputText value="#{item11.opispelny}"  rendered="#{item11.tylkosuperplace eq true}" style="color: darkorange"/>
                         </p:column>
@@ -529,8 +529,8 @@
                             }
 
                         </style>
-                        <p:pickList id="datalistra" value="#{rodzajlistyplacRodzajwynagrodzeniaView.picklista}" var="rodzajitem" itemLabel="#{rodzajitem.opisskrocony}" itemValue="#{rodzajitem}" style="margin-left: 10px;margin-top: 10px;"
-                                    showCheckbox="true" converter="#{rodzajwynagrodzeniaConverter}">
+                        <p:pickList id="datalistra" value="#{rodzajlistyplacRodzajwynagrodzeniaView.picklista}" var="rodzajitem" itemLabel="#{rodzajitem.kod} #{rodzajitem.opispelny}" itemValue="#{rodzajitem}" style="margin-left: 10px;margin-top: 10px;"
+                                    showCheckbox="true" converter="#{rodzajwynagrodzeniaConverter}" filterMatchMode="contains">
                             <p:ajax event="transfer" listener="#{rodzajlistyplacRodzajwynagrodzeniaView.onTransfer}"/>
                         </p:pickList>
                     </p:outputPanel>
