naprawy faktura korekta

--- a/npkpir_23/web/wspolny/sub/faktura/faktura_sporzadzone.xhtml
+++ b/npkpir_23/web/wspolny/sub/faktura/faktura_sporzadzone.xhtml
@@ -170,7 +170,7 @@
                 </p:column>
                 <p:column  headerText="edytuj" style="text-align: center;"  width="40">
                     <p:commandButton  update=":akordeon:formstworz, :akordeon akordeon:formstworz:poleemailkontr akordeon:formstworz:poleemailkontrahent" actionListener="#{fakturaView.skierujfakturedoedycjiZwykla(wpis)}" 
-                                      icon="ui-icon-script" oncomplete="aktywujpolewyboruklientanafakturze();" />
+                                      icon="pi pi-file-edit" oncomplete="aktywujpolewyboruklientanafakturze();" />
                 </p:column>
                  <p:column styleClass="data1" headerText="sporz" sortBy="#{wpis.datasporzadzenia}" filterBy="#{wpis.datasporzadzenia}" 
                           filterMatchMode="contains"  width="70">
