naprawy kos wyciagi wb pelna

--- a/npkpir_23/web/wspolny/sub/niemcy.xhtml
+++ b/npkpir_23/web/wspolny/sub/niemcy.xhtml
@@ -64,7 +64,7 @@
                                 <p:rowEditor />
                             </p:column>
                             <p:column headerText="" width="30" style="text-align: center;">
-                                <p:commandButton icon="pi pi-trash" update="akordeon:freistellungTable" action="#{freistellungView.deleteFreistellung(freistellung)}" />
+                                <p:commandButton icon="pi pi-trash" update="akordeon:formNiemcyfreistllung:freistellungTable" action="#{freistellungView.deleteFreistellung(freistellung)}" />
                             </p:column>
                              <!-- Nowa kolumna wyświetlająca dzień i czas dodania -->
                             <p:column headerText="naniesiono">
