zmiany w wierszach kadry do wyliczen faktur stawki stycznioiwe juz w rozliczneiu grudnia fakturowany w styczniu

--- a/kadry/src/main/webapp/info/sub/info.xhtml
+++ b/kadry/src/main/webapp/info/sub/info.xhtml
@@ -465,6 +465,9 @@
                 </p:outputPanel>
             </h:form >
                     <h:form styleClass="kadrypozycja">
+                        <p:outputPanel style="padding: 5px;">
+                            <h:outputText value="#{kadryfakturapozycjaView.komunikat}" style="color:red;"/>
+                        </p:outputPanel>
                 <p:outputPanel style="padding: 10px;">
                     <p:dataTable id="datalist" value="#{kadryfakturapozycjaView.listauslugklientcena}" var="item111"
                                  selectionMode="single"
